--- a/my-aks-configs/application.yaml
+++ b/my-aks-configs/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'https://github.com/alifurkankizil/aks-configs'
+    repoURL: 'https://github.com/alifurkankizil/aks-configs.git'
     targetRevision: HEAD
     path: simple-api 
   destination:
